<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradasi_biru"
    tools:context=".ui.DataDiriFragment">

    <TextView
        android:id="@+id/tv_datadiri"
        android:text="Data Diri"
        android:textSize="40sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_datadiri"
        app:layout_constraintEnd_toStartOf="@id/tv_datadiri"
        app:layout_constraintBottom_toBottomOf="@id/tv_datadiri"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/top_menu_sepparator">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_nisn"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                android:hint="NISN"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nisn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--TextInput Password -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/ti_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="Nama Lengkap"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                tools:layout_editor_absoluteY="212dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_transgender_24"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                android:hint="@string/string_gender"
                android:layout_margin="16dp"
                android:id="@+id/til_gender"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/sgender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:startIconDrawable="@drawable/religion"
              app:boxCornerRadiusBottomEnd="12dp"
              app:boxCornerRadiusBottomStart="12dp"
              app:boxCornerRadiusTopEnd="12dp"
              app:boxCornerRadiusTopStart="12dp"
              android:hint="@string/string_agama"
              android:layout_margin="16dp"
              android:id="@+id/til_agama"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

              <AutoCompleteTextView
                  android:id="@+id/sAagama"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="none"/>
          </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_class_24"
                android:hint="@string/string_kelas"
                android:layout_margin="16dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                android:id="@+id/til_kelas"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/sKelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/ti_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="Alamat"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/alamat"
                tools:layout_editor_absoluteY="212dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/ti_nip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="NIP / NUPTK"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:errorEnabled="true"
                android:visibility="gone"
                app:startIconDrawable="@drawable/ic_baseline_confirmation_number_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_nama"
                tools:layout_editor_absoluteY="212dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/ti_jabatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="Jabatan"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                android:visibility="gone"
                app:boxCornerRadiusTopStart="12dp"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_work_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_nip"
                tools:layout_editor_absoluteY="212dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etjabatan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/btn_tambah"
                android:text="Tambah"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_alamat"/>
            <TextView
                android:id="@+id/btn_edit"
                android:text="Edit"
                android:textSize="18dp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_tambah"/>

        </LinearLayout>


    </ScrollView>








</androidx.constraintlayout.widget.ConstraintLayout>